# dapple

./: .gitignore  AGENTS.md  README.md  pyproject.toml
dapple/: __init__.py  clipboard.py  colors.py  coordinates.py  elements.py  export.py  occupancy.py  scales.py  textextents.py  treemap.py
src/dapple/: __init__.py  clipboard.py  colors.py  config.py  coordinates.py  defaults.py  elements.py  hclust_order.py  layout.py  moderngl_utils.py  occupancy.py  plot.py  scales.py  svg.py  textextents.py
src/dapple/geometry/: __init__.py  bars.py  grids.py  heatmap.py  histogram.py  histogram2d.py  image.py  key.py  labels.py  lines.py  points.py  rasterized_heatmap.py  rasterized_points.py  rasterized_polygon_outlines.py  rasterized_polygons.py  rasterized_segments.py  stacked_bars.py  ticks.py  violin.py
tests/: test_key.py  test_xticklabels_rotate.py  test_yticklabels_rotate.py
tests/geometry/: test_bars.py  test_heatmap.py  test_histogram.py  test_histogram2d.py  test_image.py  test_labels.py  test_lines.py  test_points.py  test_rasterized_heatmap.py  test_rasterized_points.py  test_rasterized_polygon_outlines.py  test_rasterized_polygons.py  test_rasterized_segments.py  test_stacked_bars.py  test_text_labels.py  test_ticks.py  test_violin.py
tests/integration/: test_basic_plotting.py  test_stacked_bar_plotting.py  test_violin_plotting.py
tests/unit/: test_colorconv.py  test_config.py  test_coordinates.py  test_font_discovery.py  test_fonts.py  test_hclust_order.py  test_scales_continuous.py  test_scales_labeler.py  test_scales_size.py
