[project]
name = "dapple"
version = "0.1.0"
description = "Efficient and elegant plotting "
authors = [
    {name = "Daniel C. Jones"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cmap>=0.6.2",
    "freetype-py>=2.5.1",
    "matplotlib>=3.10.5",
    "sympy>=1.14.0",
    "uharfbuzz>=0.51.2",
]

[tool.pyright]
venvPath = "."
venv = ".venv"
